Fix z-index and firefox bugs

--- a/src/styles/code.module.css
+++ b/src/styles/code.module.css
@@ -1,4 +1,5 @@
 .code * {
   overflow-wrap: normal !important;
   white-space: pre;
+  word-break: normal !important;
 }
